intTests/test_type_errors/err052.log.good
 Loading file "err52.saw"
 Type errors:
  err52.saw:8:13-8:25: Inaccessible type: "BisimTheorem"
  err52.saw:8:13-8:25: This type is available only after running `enable_experimental`.

FAILED
